Fix gap at bottom of website content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ Main {
     flex-direction: column;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  /* Using main content to push footer to the bottom of the page */
- flex: 1 0 auto;
+    flex: 1 0;
 }
 #noticeboard{
     max-width: 75%;
@@ -134,6 +134,7 @@ Footer{
     text-align: center;
 /* Footer height */
     flex-basis:  100px;
+
 }
 footer img {
     height: 1.5rem;
